# serial-scale-bench

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  serial_scale.py  serial_scale_api.py  serial_scale_autoconnect.py  serial_scale_v2.py  sitemap.xml
.github/workflows/: CI.yaml  bump.yaml  docs.yml  install_and_test.yaml
docs/: api.md  getting_started.md  index.md  protocols.md  usage.md
example_dash_localhost/: example_dash_localhost.py  hello  run_api_cors.py
search/: search_index.json
serial_scale_bench/: __init__.py  api.py  cli.py  entrypoint.py  scale.py
src/serial_scale_bench/: api.py  cli.py  entrypoint.py  scale.py
tests/: test_placeholder.py  test_scale_protocol.py
