[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "serial-scale-bench"
dynamic = ["version"]
description = "Python driver for RS-232/USB bench scales (Kern, Mettler-Toledo, etc.)."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "lars@rollik.me" },
]
requires-python = ">=3.11"
dependencies = [
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/MurineShiftWork/serial-scale-bench"
Documentation = "https://larsrollik.github.io/serial-scale-bench/"
"Issue Tracker" = "https://github.com/MurineShiftWork/serial-scale-bench/issues"

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/serial_scale_bench/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/serial_scale_bench"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/serial_scale_bench",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CITATION.cff",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.2.2"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=serial_scale_bench --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
